<resources>
    <string name="app_name">EffectiveMobileTest</string>
    <string name="error">Что-то пошло не так...</string>

    <!--Splash-->
    <string name="welcome">Добро пожаловать!</string>

    <!--Main menu-->
    <string name="search">Поиск</string>
    <string name="favorites">Избранное</string>
    <string name="callbacks">Отклики</string>
    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>
    <string name="vacancy">Вакансия</string>

    <!--Search fragment-->
    <string name="search_tip">Должность, ключевые слова</string>
    <string name="filter">Фильтр</string>
    <string name="vacancies_title">Вакансии для вас</string>
    <string name="vacancies_checkout">Смотреть другие вакансии</string>
    <string name="no_offers">Нет специальных предложений</string>
    <string name="no_vacancies">Нет вакансий</string>

    <!--Offer item-->
    <string name="offer_text">Текст предложения</string>
    <string name="offer_info">Поднять</string>

    <!--Vacancy item-->
    <string name="vacancy_looking">Столько-то человек просматривают</string>
    <string name="vacancy_title">Название</string>
    <string name="vacancy_town">Город</string>
    <string name="vacancy_company">Компания</string>
    <string name="vacancy_experience">Опыт работы</string>
    <string name="vacancy_published_date">Опубликована тогда-то</string>
    <string name="vacancy_callback">Откликнуться</string>

    <!--More vacancies fragment-->
    <string name="search_vacancies_tip">Должность по ключевым словам</string>

    <!--Favorites fragment-->
    <string name="vacancy_count">1 вакансия</string>


</resources>