<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vacancy_background"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:layout_margin="12dp"
    android:background="@drawable/rounded_background"
    android:orientation="vertical">
    <TextView
        android:id="@+id/vacancy_looking_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="40dp"
        android:text="@string/vacancy_looking"
        android:textColor="@color/green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:id="@+id/vacancy_is_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleY="1.5"
        android:scaleX="1.5"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/heart_default"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/vacancy_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:text="@string/vacancy_title"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/vacancy_looking_number"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/vacancy_town"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:text="@string/vacancy_town"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/vacancy_title"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/vacancy_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:text="@string/vacancy_company"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/vacancy_town"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/verified_company_icon"
        app:layout_constraintTop_toBottomOf="@id/vacancy_town"
        app:layout_constraintStart_toEndOf="@id/vacancy_company"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/experince_con"
        app:layout_constraintTop_toBottomOf="@id/vacancy_company"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/vacancy_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:text="@string/vacancy_experience"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/vacancy_company"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/vacancy_published_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:text="@string/vacancy_published_date"
        android:textColor="@color/gray3"
        app:layout_constraintTop_toBottomOf="@id/vacancy_experience"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vacancy_callback"
        android:backgroundTint="@color/green"
        android:layout_margin="8dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>