<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/search_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="12dp"
        android:text="@string/search_tip"
        android:background="@drawable/search_field"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColor="@color/gray4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/search_default"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/search" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="330dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/filter_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/filter" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/offers_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/search_field"
        android:orientation="horizontal"/>
    <TextView
        android:id="@id/vacancies_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/offers_rv"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/vacancies_title"
        android:textColor="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vacancies_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@+id/vacancies_title"
        app:layout_constraintBottom_toTopOf="@id/more_vacancies_button"
        android:orientation="vertical"/>

    <Button
        android:id="@+id/more_vacancies_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:fontFamily="@font/sfprodisplayregular"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:text="@string/vacancies_checkout"/>


</androidx.constraintlayout.widget.ConstraintLayout>